--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/public/burgers.js"></script>
+    <script src="/burgers.js"></script>
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Galada" rel="stylesheet">
     <title>Eat Da Burger</title>
 </head>
+
 <body>
     {{{body}}}
 </body>
+
 </html>
