--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
                 <input type="text" id="ca" name="burger_name">
             </div>
 
-            <button type="submit" class="eat" id="formButton">Add Burger</button>
+            <button type="submit" id="formButton">Add Burger</button>
         </form>
     </div>
 
